--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -15,7 +15,7 @@
                 
                 <input type="file" id="myfile" name="myfile">
                 <p>Drag your files here or click in this area.</p>
-                <button type="submit">Upload</button>
+                <button type="submit">Download</button>
                 
                 
             </form>
